--- a/src/components/works/works.module.scss
+++ b/src/components/works/works.module.scss
@@ -61,7 +61,7 @@
     margin-bottom: 5px;
     font-size: 30px;
 }
-.project-item .project-badge .soldout-badge {
+.soldout-badge {
     color: #fff;
     padding: 5px;
     border-radius: 3px;
