--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
 @import '../node_modules/bootstrap/dist/css/bootstrap.rtl.min.css';
 @import '../node_modules/swiper/swiper-bundle.css';
+*{
+    box-sizing: border-box;
+}
+body,html{
+    overflow-y: auto;
+}
