--- a/src/components/home/achivement/achievement.module.css
+++ b/src/components/home/achivement/achievement.module.css
@@ -1,7 +1,11 @@
 .achievements-items{
+    background-image: url('../../../../public/assets/images/011.png');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-attachment: fixed;
     position: relative;
     z-index: 1;
-    padding: 5rem 0;
+    padding: 10rem 0;
 
 }
 
@@ -13,6 +17,7 @@
     z-index: -1;
     width: 100%;
     height: 100%;
+    background-color: rgba(0, 0, 0, 0.72);
 }
 .title strong {
     color: #c1970e;
