--- a/src/components/home/projects/project.module.css
+++ b/src/components/home/projects/project.module.css
@@ -6,23 +6,13 @@ ul{
     list-style: none;
     padding: 0;
 }
-.projects::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    background-color: #c1970e0f;
-}
 .title strong {
-    color: #c1970e;
+    color: rgb(101, 127, 168);;
 }
 .project-item {
     position: relative;
     height: 479px;
-    border-radius: 10px;
+    border-radius: 10px 10px 0 0;
     overflow: hidden;
 }
 
@@ -32,7 +22,7 @@ ul{
 .project-item .project-img {
     height: 100%;
     width: 100%;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     overflow: hidden;
 }
 a, a:hover {
@@ -47,7 +37,6 @@ a, a:hover {
 }
 
 .project-item .project-img img {
-    border-radius: 10px;
     object-fit: cover;
     height: 100%;
     width: 100%;
@@ -118,36 +107,36 @@ a, a:hover {
     z-index: 6;
     bottom: 0;
     width: 100%;
-
     color: white;
-
-padding: 1rem;
-    height: 180px;
+    padding: 1rem;
+    /* height: 180px; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
-/* .project-item .project-info {
-    height: 0px;
+.project-body{
+    position: relative;
+    height: 85%;
+}
+.project-item .project-info {
+    height: fit-content;
     position: absolute;
     bottom: 0;
     right: 0;
     width: 100%;
-    z-index: 1;
-    display: none;
+    z-index: 11;
+    /* display: none; */
     /* color: #fff; */
-    /* padding: 0.3rem 1rem;
-    background-color: #fffffff0;
-    transition: height 2s ease-in-out 0s,display 2s ease-in-out 0s; 
+    font-weight: bold;
+    font-size: 26px;
+    /*transition: height 2s ease-in-out 0s,display 2s ease-in-out 0s; 
 
-} */
+}
 .project-item .project-info .project-title {
     display: block;
     color: #fff;
     /* color:rgb(101 127 168) !important; */
-    font-weight: bold;
-    font-size: 26px;
-    margin-bottom: 0.1rem;
+
 }
 .project-item .project-info .project-description {
     font-size: 18px;
@@ -161,35 +150,29 @@ padding: 1rem;
 .list-units-item .fas{
     color:white;
 }
-.project-item::after{
+.project-info::after{
     content: "";
     display: block;
     width: 100%;
-    height: 480px;
-    z-index: 5;
+    aspect-ratio: 1 / 0.25;
+    z-index: -8;
     position: absolute;
-    top:0;
-    transform: rotate(55deg) translate(260px, 85px);
+    top: 0;
+    left: 0;
+    transform: rotate(-200deg) translate(-40%, 0px);
 }
 .col-lg-4{
     margin-bottom: 1rem;
 }
-.col-lg-4:nth-child(odd):hover .project-item::after{
+.col-lg-4:nth-child(odd) .project-info::after{
     background-color: #c1970e;
 
 }
-.col-lg-4:nth-child(even):hover .project-item::after{
+.col-lg-4:nth-child(even) .project-info::after{
     background-color: rgb(101, 127, 168);
 }
-.col-lg-4:nth-child(odd) .project-item::after{
-    background-color: #c1970e8d;
 
-}
-.col-lg-4:nth-child(even) .project-item::after{
-    background-color: rgba(101, 127, 168, 0.501);
-
-}
-@media(max-width:700px){
+/* @media(max-width:700px){
     .project-item::after{
         height:550px
     }
@@ -198,6 +181,35 @@ padding: 1rem;
     .project-item::after{
         height:400px
     }
+} */
+ .project-footer{
+    height: 10%;
+  
+    position: relative;
+    border-radius: 0 0 10px 10px;
+
+
+ }
+ .col-lg-4:nth-child(odd) .project-footer{
+    background-color: #c1970e;
+ }
+ .col-lg-4:nth-child(even) .project-footer{
+    background-color: rgb(101, 127, 168);
+ }
+ .col-lg-4:nth-child(odd) .project-info{
+    background-color: #c1970e;
+ }
+ .col-lg-4:nth-child(even) .project-info{
+    background-color: rgb(101, 127, 168);
+ }
+ .project-footer ul{
+    margin: 0;
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    z-index: 11;
+    transform: translateY(-50%);
+    color: white;
 }
 @keyframes fadeup{
     0%{
