--- a/src/components/news/news.module.scss
+++ b/src/components/news/news.module.scss
@@ -32,10 +32,49 @@
         background-color: rgb(32 53 54 / 74%);
     }
 }
+
+.blog_post_preview{
+    margin-bottom: 6rem ;
+    &:nth-child(1){
+        margin-top: 3rem;
+    }
+    &:nth-child(even){
+        .blog_content{
+            display: flex;
+            gap:20px;
+            flex-direction: row-reverse;
+            align-items: center;
+        }
+    }
+    &:nth-child(odd){
+        .blog_content{
+            display: flex;
+            gap:20px;
+            flex-direction: row;
+            align-items: center;
+
+        }
+
+    }
+
+}
+.blog_post_preview-new{
+    h2{
+        margin-top: 2rem;
+        margin-bottom: 2.5rem;    
+    }
+    img{
+
+    }
+}
+.blog_post_media-new{
+    margin: auto;
+}
 .blog_post_media,.post_media{
+    width: 50%;
     img{
         width: 100%;
-        height: 75vh; 
+        height: 50vh; 
     }
 
 }
@@ -56,7 +95,6 @@
 .post_footer{
     color: #e3be17!important;
     margin: 1rem 0;
-    text-align: end;
     button{
         background-color: transparent;
         border: none;
@@ -68,6 +106,9 @@
     }
 
 }
+.content{
+    width: 50%;
+}
 .contact{
     img{
         width:350px
@@ -75,8 +116,14 @@
 }
 .blog_item_description{
     text-overflow: ellipsis;
-    white-space: nowrap;
+    word-wrap: break-word;
     overflow: hidden;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+}
+.blog_item_description_new{
+    text-align: justify;
 }
 .blog_post_preview{
     cursor: pointer;
