--- a/src/components/news/news.module.scss
+++ b/src/components/news/news.module.scss
@@ -1,4 +1,6 @@
-
+.sec-news{
+    padding: 0 0 2rem 0;
+}
 .sec-title{
     background-image: url('../../../public/assets/images/News.jpeg');
     height: 400px;
@@ -58,6 +60,19 @@
     }
 
 }
+
+.post_title{
+    color: #e3be17 !important;
+    margin-bottom: 0 !important;
+    span{
+        display: block;
+        margin: 0.5rem 0 2rem 0;
+        color: black!important;
+        font-weight: 100;
+        font-size: 0.5em;
+    }
+
+}
 .blog_post_preview-new{
     h2{
         margin-top: 2rem;
@@ -74,14 +89,11 @@
     width: 50%;
     img{
         width: 100%;
-        height: 50vh; 
+        height: 40vh; 
     }
 
 }
-.post_title{
-    color: #e3be17!important;
-    margin:0 0 4rem 0;
-}
+
 .blogpost_title,.blog_post_footer{
     color: #e3be17!important;
     margin: 1rem 0;   
@@ -124,7 +136,78 @@
 }
 .blog_item_description_new{
     text-align: justify;
+    line-height: 2;
+    margin: 3rem 0;
 }
 .blog_post_preview{
     cursor: pointer;
+}
+.swiper {
+    width: 100%;
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    height: calc((100% - 30px) / 2) !important;
+  
+    /* Center slide text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+@media(max-width:900px){
+    .blog_post_preview{
+        .blog_post_media,.post_media{
+            width: 80%;
+        }
+        .content{
+            width: 80%;
+        }
+        &:nth-child(even){
+            .blog_content{
+                flex-direction:column;
+                justify-content: center;
+            }
+        }
+        &:nth-child(odd){
+            .blog_content{
+                flex-direction: column;
+                justify-content: center;
+    
+            }
+    
+        }
+    
+    }
+}
+@media(max-width:600px){
+    .blog_post_preview{
+        .blog_post_media,.post_media{
+            width: 100%;
+        }
+        .content{
+            width: 100%;
+        }
+        &:nth-child(even){
+            .blog_content{
+                flex-direction:column;
+                align-items: start;
+            }
+        }
+        &:nth-child(odd){
+            .blog_content{
+                flex-direction: column;
+                align-items: start;
+    
+            }
+    
+        }
+    
+    }
 }
