--- a/src/components/home/header-banner/header-banner.module.scss
+++ b/src/components/home/header-banner/header-banner.module.scss
@@ -1,4 +1,5 @@
 @import '../../shared/animation.module.scss';
+@import '../../shared/color.scss';
 .header-banner {
     height: 700px;
     overflow: hidden;
@@ -15,7 +16,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #000;
+    background-color: $backgroundcolor_lite_black;
     opacity: 0.5;
 }
 
@@ -33,7 +34,7 @@
     left: 0;
     transform: translateY(-50%);
     width: 100%;
-    color: #fff;
+    color: white;
     z-index: 1;
 }
 
@@ -64,7 +65,7 @@
     display: block;
     width: 80px;
     height: 80px;
-    background: rgb(101 127 168) !important;;
+    background: $color_green !important;;
     border-radius: 50%;
     -webkit-animation: pulse-border 1500ms ease-out infinite;
     animation: pulse-border 1500ms ease-out infinite;
@@ -86,7 +87,7 @@
     display: block;
     width: 80px;
     height: 80px;
-    background: rgb(101 127 168) !important;;
+    background: $color_green !important;;
     border-radius: 50%;
     transition: all 200ms;
 }
@@ -97,8 +98,8 @@
 }
 
 .navbar.bg-body-tertiary.bg-dark.navbar-sticky.sticky {
-    background-color: #fff !important;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    background-color: white !important;
+    box-shadow: 0 2px 10px black;
 }
 @media (max-width: 767px) {
     .header-banner {
@@ -172,4 +173,7 @@
     .banner-slides .swiper-horizontal > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic, .banner-slides .swiper-pagination-horizontal.swiper-pagination-bullets.swiper-pagination-bullets-dynamic {
         bottom: 16px;
     }
+}
+.btn-yellow{
+    background-color: $color_lite_yellow;
 }
