--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -1,17 +1,14 @@
 @import '../shared/animation.module.scss';
+@import '../shared/color.scss';
+
 a, a:hover {
     text-decoration: none;
     transition: 0.3s;
 }
 .btn.btn-primary {
-    color: #fff;
-    background-color: #e3be17;
-    border-color: #e3be17;
-}
-.btn.btn-primary {
-    color: #fff;
-    background-color: #e3be17;
-    border-color: #e3be17;
+    color: white;
+    background-color: $color_lite_yellow;
+    border-color: $color_lite_yellow;
 }
 .btn_reg_fav:hover {
     border: 2.5px solid transparent;
