--- a/src/components/home/partner/partner.css
+++ b/src/components/home/partner/partner.css
@@ -1,6 +1,5 @@
 .achievements-items{
-    background-image: url('../../../../public/assets/images/011.png');
-    background-color: #f2f6f7;
+    /* background-image: url('../../../../public/assets/images/011.png'); */
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
@@ -15,7 +14,6 @@
     z-index: -1;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
 }
 .title strong {
     color: #c1970e;
