--- a/src/components/home/projects/project.module.css
+++ b/src/components/home/projects/project.module.css
@@ -1,3 +1,4 @@
+@import '../../shared/color.scss';
 .projects{
     position: relative;
     z-index: 1;
@@ -7,7 +8,7 @@ ul{
     padding: 0;
 }
 .title strong {
-    color: rgb(101, 127, 168);;
+    color: #c1970e;
 }
 .project-item {
     position: relative;
@@ -56,7 +57,6 @@ a, a:hover {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     font-size: 14px;
     font-weight: 500;
-    background-color: #c1970e;
     display: inline-block;
     transform: rotate(317deg);
     position: absolute;
@@ -64,20 +64,25 @@ a, a:hover {
     top: 0;
     width: 180px;
     text-align: center;
+    color: #fff !important;
+
 }
 
-.construction-badge {
-    background-color: #c1970e;
-    color: #fff !important;
-}
+
 .project-item .project-badge .project-place {
     font-weight: 700;
-    background-color: #c1970e;
+    /* background-color: #c1970e; */
     color: #ffff;
     font-size: 14px;
     border-radius: 3px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 5px;
+}
+.col-lg-4:nth-child(odd) .project-badge .project-place,.col-lg-4:nth-child(odd)  .construction-badge {
+    background-color: #c1970e;
+}
+.col-lg-4:nth-child(even) .project-badge .project-place,.col-lg-4:nth-child(even) .construction-badge {
+    background-color: #9aa6a6;
 }
 .project-item .project-badge .sale-badge {
     color: #fff;
@@ -150,6 +155,12 @@ a, a:hover {
 .list-units-item .fas{
     color:white;
 }
+.project-info p{
+    margin: 0;
+}
+.project-info a{
+    color: white;
+}
 .project-info::after{
     content: "";
     display: block;
@@ -159,7 +170,7 @@ a, a:hover {
     position: absolute;
     top: 0;
     left: 0;
-    transform: rotate(-200deg) translate(-40%, 0px);
+    transform: rotate(-193deg) translate(-50%);
 }
 .col-lg-4{
     margin-bottom: 1rem;
@@ -169,7 +180,7 @@ a, a:hover {
 
 }
 .col-lg-4:nth-child(even) .project-info::after{
-    background-color: rgb(101, 127, 168);
+    background-color: #9aa6a6;
 }
 
 /* @media(max-width:700px){
@@ -194,13 +205,13 @@ a, a:hover {
     background-color: #c1970e;
  }
  .col-lg-4:nth-child(even) .project-footer{
-    background-color: rgb(101, 127, 168);
+    background-color: #9aa6a6;
  }
  .col-lg-4:nth-child(odd) .project-info{
     background-color: #c1970e;
  }
  .col-lg-4:nth-child(even) .project-info{
-    background-color: rgb(101, 127, 168);
+    background-color: #9aa6a6;
  }
  .project-footer ul{
     margin: 0;
