--- a/src/components/home/we/weComponent.module.scss
+++ b/src/components/home/we/weComponent.module.scss
@@ -1,5 +1,6 @@
+@import '../../shared/color.scss';
 .about{
-    padding: 5rem 0;
+    padding: 0 0 3rem 0;
 }
 .about p {
     font-weight: 500;
@@ -9,27 +10,31 @@
     margin-bottom: 30px;
 }
 .aboutinfo .item strong {
-    border-right: 5px solid rgb(101, 127, 168) !important;
-    color: rgb(101, 127, 168) !important;
+    border-right: 5px solid $color_green !important;
+    color: $color_green !important;
     font-weight: 600;
 }
 .col-lg-5{
     padding: 0px;
 }
 .col-lg-6{
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    height: 80vh;
     .title{
         padding:1rem 0 0 0;
         text-align: center;
-    color :rgb(101, 127, 168) !important;}
-    background-color: #c1970e0f;
+    color :$color_green !important;}
+    background-color: #9aa6a629;
 
 }
 .about-img{
     position: relative;
-    background-image: url('../../../../public/assets/images/we.png');
+    background-image: url('../../../../public/assets/images/slider1.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    height:445px;
+    height:80vh;
 }
 @media(max-width:1000px){
     .col-lg-5{
