--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
 @import '../node_modules/bootstrap/dist/css/bootstrap.rtl.min.css';
 @import '../node_modules/swiper/swiper-bundle.css';
 *{
-    box-sizing: border-box;
+    box-sizing: border-box!important;
+    /* overflow: hidden; */
 }
 body,html{
     overflow-y: auto;
