--- a/src/components/shared/image/image.module.scss
+++ b/src/components/shared/image/image.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: start;
     align-items: center;
+    flex-wrap: wrap;
     .image{
         width: 200px;
         height: 200px;
