--- a/src/components/home/header-banner/header-banner.module.scss
+++ b/src/components/home/header-banner/header-banner.module.scss
@@ -1,7 +1,7 @@
 @import '../../shared/animation.module.scss';
 @import '../../shared/color.scss';
 .header-banner {
-    height: 700px;
+    height: 100vh;
     overflow: hidden;
 }
 .banner-slides .swiper-horizontal > .swiper-pagination-bullets.swiper-pagination-bullets-dynamic,
