--- a/src/components/shared/color.scss
+++ b/src/components/shared/color.scss
@@ -1,7 +1,7 @@
 $backgroundcolor_green:hsla(177, 18%, 26%, 0.502);
-$color_green:#364d4c;
+$color_green:#213131;
 $backgroundcolor_yellow:#9d783c80;
-$color_yellow:#9d783c;
+$color_yellow:#9c783d;
 $backgroundcolor_brown:#998f8c80;
 $color_brown:#998f8c;
 $color_lite_yellow:#e3be17;
