--- a/src/components/shared/color.scss
+++ b/src/components/shared/color.scss
@@ -1,10 +1,10 @@
-$backgroundcolor_green:hsla(177, 18%, 26%, 0.502);
-$color_green:#213131;
-$backgroundcolor_yellow:#9d783c80;
 $color_yellow:#9c783d;
-$backgroundcolor_brown:#998f8c80;
-$color_brown:#998f8c;
-$color_lite_yellow:#e3be17;
-$backgroundcolor_lite_yellow:#e3be1780;
-$backgroundcolor_lite_black:#00000080;
+$color_green:#213131;
+$color_brown:#81746e;
+$backgroundcolor_yellow:#9c783d;
+$backgroundcolor_brown:#81746e;
+$backgroundcolor_green:#213131;
+$color_lite_yellow:#9c783da7;
+$color_lite_green:#213131a7;
+$color_lite_brown:#81746ea7;
 $color_gray:#878585;
