--- a/src/components/DashboardLayout/DashboardLayout/dashboard-layout.scss
+++ b/src/components/DashboardLayout/DashboardLayout/dashboard-layout.scss
@@ -104,6 +104,7 @@
     bottom: 0;
     width: 100%;
     text-align: center;
+    color: white;
 }
 @media screen and (min-width: 1200px) {
     #sidebar .sidebar-wrapper {
