--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,16 @@
 body,html{
     overflow-y: auto;
 }
+.loader-container-inner{
+    width: fit-content;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+.btn-check:checked + .btn, :not(.btn-check) + .btn:active, .btn:first-child:active, .btn.active, .btn.show {
+    background-color: inherit;
+    color: inherit;
+    border-color:inherit
+}
